# qis

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  qis.yml
qis/: __init__.py  core.py
qis/conf/: config.properties
qis/data/: analysis.py  panel.py  securities.py  time_series.py
